--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -712,6 +712,15 @@ ul.summary-list > li:last-child  {
     margin-bottom: 2rem;
     box-shadow: 2px 2px 5px 5px rgb(107, 102, 102);
 }
+.form form .error-text{
+    color: #721c24;
+    padding: 8px 10px;
+    text-align: center;
+    border-radius: 5px;
+    background: #f8d7da;
+    border: 1px solid #f5c6cb;
+    margin-bottom: 10px;
+  }
 /* Cart */
 @media screen and (max-width: 600px) { 
     table#cart tbody td .form-control { 
